--- a/scss/style.css
+++ b/scss/style.css
@@ -155,4 +155,20 @@ body .hero .bottom-left-image {
   position: absolute;
   bottom: 0;
   transform: translateY(-50%);
+}
+body .clients {
+  background-color: #f5f6f8;
+  width: 100%;
+  padding: 40px 0;
+  text-align: center;
+}
+body .clients h3 {
+  margin-bottom: 30px;
+  font-weight: 400;
+  font-size: 22px;
+}
+body .clients .client-logos {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }/*# sourceMappingURL=style.css.map */
