--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 $body-section: #fafbff;
 $hero-section1: #62bada;
 $hero-section2: #c9e7f2;
+$client-section: #f5f6f8;
 
 * {
   margin: 0;
@@ -163,6 +164,22 @@ body {
       position: absolute;
       bottom: 0;
       transform: translateY(-50%);
+    }
+  }
+  .clients {
+    background-color: $client-section;
+    width: 100%;
+    padding: 40px 0;
+    text-align: center;
+    h3 {
+      margin-bottom: 30px;
+      font-weight: 400;
+      font-size: 22px;
+    }
+    .client-logos {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
     }
   }
 }
