--- a/scss/style.scss
+++ b/scss/style.scss
@@ -10,6 +10,7 @@ $client-section: #f5f6f8;
 }
 body {
   background-color: $body-section;
+  font-family: "Manrope", sans-serif;
   color: black;
 
   .container {
@@ -70,7 +71,6 @@ body {
       gap: 30px;
       .hero-text {
         display: flex;
-        font-family: "Manrope", sans-serif;
         flex-direction: column;
         padding-right: 20px;
         margin-top: 175px;
@@ -180,6 +180,116 @@ body {
       display: flex;
       align-items: center;
       justify-content: space-between;
+    }
+  }
+  .portfolio-tracking {
+    margin-top: 80px;
+
+    .tracking-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      height: fit-content;
+      .text {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        .automated {
+          font-weight: 800;
+          font-size: 56px;
+        }
+        .sub-title {
+          font-weight: 400;
+          font-size: 16px;
+        }
+      }
+      .testimonial {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        width: 405px;
+        border-radius: 15px;
+        background-color: #c4c4c4;
+        padding: 30px 25px;
+        font-weight: 600;
+        font-size: 15px;
+        position: relative;
+        .quote-left {
+          position: absolute;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          height: 44px;
+          width: 44px;
+          border-radius: 50%;
+          background-color: black;
+          color: white;
+          top: 0;
+          transform: translateY(-50%);
+        }
+      }
+    }
+    .tracking-methods {
+      display: flex;
+      align-items: center;
+      gap: 80px;
+      margin-top: 70px;
+
+      .tracking-card {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        height: 360px;
+        gap: 15px;
+        background-color: white;
+        flex: 1;
+        padding: 100px 25px 15px 25px;
+        border: 1px solid #dbe4e9;
+        text-align: center;
+        border-radius: 15px;
+        .upper-box {
+          background-color: black;
+          width: 39px;
+          height: 10px;
+          margin-bottom: 5px;
+        }
+        .lower-box {
+          width: 50px;
+          height: 30px;
+          background-color: pink;
+        }
+        .blue {
+          background-color: #3734a9;
+        }
+        .orange {
+          background-color: #ff7f5c;
+        }
+        .yellow {
+          background-color: #fdbc64;
+        }
+        h2 {
+          font-weight: 800;
+          font-size: 30px;
+          line-height: 34px;
+          padding-right: 15px;
+          padding-left: 15px;
+          margin-top: 10px;
+        }
+        p {
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 26px;
+          color: #757095;
+        }
+        .number {
+          position: absolute;
+          top: 15px;
+          left: 15px;
+          font-weight: 800;
+          font-size: 22px;
+        }
+      }
     }
   }
 }
