--- a/scss/style.scss
+++ b/scss/style.scss
@@ -14,7 +14,7 @@ body {
   color: black;
 
   .container {
-    max-width: 1300px;
+    max-width: 1250px;
     margin: 0 auto;
     padding: 0 10px;
   }
@@ -61,6 +61,7 @@ body {
     padding: 10px 20px;
     font-weight: 500;
   }
+
   .hero {
     background: linear-gradient(to right, $hero-section2, $hero-section1);
     position: relative;
@@ -244,7 +245,7 @@ body {
         gap: 15px;
         background-color: white;
         flex: 1;
-        padding: 100px 25px 15px 25px;
+        padding: 85px 25px 15px 25px;
         border: 1px solid #dbe4e9;
         text-align: center;
         border-radius: 15px;
@@ -288,6 +289,132 @@ body {
           left: 15px;
           font-weight: 800;
           font-size: 22px;
+        }
+      }
+    }
+  }
+
+  .track-payments {
+    margin-top: 100px;
+    height: 500px;
+
+    .payments {
+      display: flex;
+      .image-container {
+        position: relative;
+        .image-top {
+          position: absolute;
+          top: -20px;
+          right: 25%;
+          transform: translateX(45%);
+        }
+      }
+      .payments-content {
+        display: flex;
+        flex-direction: column;
+        padding: 15px 0;
+        gap: 20px;
+        .why-choose {
+          font-weight: 700;
+          font-size: 14px;
+          line-height: 100%;
+          color: #3734a9;
+        }
+        h2 {
+          font-weight: 800;
+          font-size: 50px;
+          line-height: 60px;
+        }
+        p {
+          font-weight: 400;
+          font-size: 18px;
+          line-height: 30px;
+          color: #64607d;
+          margin-right: 10px;
+        }
+        .line {
+          width: 100;
+          height: 2px;
+          background-color: #c4c4c4;
+        }
+        ul {
+          list-style: none;
+          li {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            margin-bottom: 8px;
+            font-weight: 400;
+            font-size: 19px;
+            line-height: 30px;
+            color: #64607d;
+
+            i {
+              color: #fdbc64;
+            }
+          }
+        }
+      }
+    }
+  }
+  .save-money {
+    height: 700px;
+    overflow: hidden;
+    .save-money-container {
+      display: flex;
+      .save-money-content {
+        display: flex;
+        flex-direction: column;
+        padding: 15px 0;
+        gap: 30px;
+        margin-top: 150px;
+        .why-choose {
+          font-weight: 700;
+          font-size: 14px;
+          line-height: 100%;
+          color: #3734a9;
+        }
+        h2 {
+          font-weight: 800;
+          font-size: 50px;
+          line-height: 60px;
+        }
+        p {
+          font-weight: 400;
+          font-size: 18px;
+          line-height: 30px;
+          color: #64607d;
+          margin-right: 10px;
+        }
+        .testimonial {
+          display: flex;
+          flex-direction: column;
+          gap: 15px;
+          width: 100%;
+          border-radius: 15px;
+          background-color: #c4c4c4;
+          padding: 30px 25px;
+          margin-top: 20px;
+          position: relative;
+          p,
+          span {
+            font-weight: 600;
+            color: black;
+            font-size: 15px;
+          }
+          .quote-left {
+            position: absolute;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 44px;
+            width: 44px;
+            border-radius: 50%;
+            background-color: black;
+            color: white;
+            top: 0;
+            transform: translateY(-50%);
+          }
         }
       }
     }
