--- a/scss/style.scss
+++ b/scss/style.scss
@@ -495,4 +495,65 @@ body {
       }
     }
   }
+  .testimonials {
+    margin-top: 120px;
+    .header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      .header-left {
+        h2 {
+          font-weight: 800;
+          font-size: 71px;
+          line-height: 66px;
+          margin-bottom: 20px;
+        }
+        p {
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 29px;
+          margin-bottom: 20px;
+        }
+      }
+      img {
+        margin-right: 30px;
+      }
+    }
+
+    .testimonials-container {
+      width: calc(100vw - (100vw - 1250px) / 2 - 19px);
+      display: flex;
+      gap: 40px;
+      margin-top: 55px;
+      overflow-x: scroll;
+
+      scrollbar-width: none;
+      -ms-overflow-style: none;
+      .testimonial-card {
+        display: flex;
+        width: 700px;
+        flex-shrink: 0;
+        border: 1px solid black;
+        .testimonial-content {
+          margin: 40px 0px 0 20px;
+          p {
+            font-weight: 600;
+            font-size: 25px;
+            line-height: 36px;
+            margin-bottom: 40px;
+          }
+          span {
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 22px;
+          }
+        }
+        img {
+          height: 350px;
+          width: 240px;
+          padding: 25px;
+        }
+      }
+    }
+  }
 }
