--- a/scss/style.scss
+++ b/scss/style.scss
@@ -629,4 +629,165 @@ body {
       transform: translateY(-50%);
     }
   }
+  .blogs {
+    margin-top: 90px;
+    .recent {
+      font-weight: 800;
+      font-size: 71px;
+      line-height: 66px;
+    }
+    .blog-main {
+      margin-top: 80px;
+      background-color: white;
+      display: flex;
+      justify-content: space-between;
+      height: 285px;
+      img {
+        height: 285px;
+      }
+      .main-text {
+        padding: 20px 15px 0 15px;
+        span {
+          font-weight: 700;
+          font-size: 16px;
+          line-height: 36px;
+        }
+        p {
+          font-weight: 700;
+          font-size: 29px;
+          line-height: 36px;
+          margin-bottom: 80px;
+        }
+        a {
+          display: flex;
+          gap: 5px;
+          align-items: center;
+          font-weight: 600;
+          font-size: 16px;
+          line-height: 16px;
+          color: #1b1c31;
+          i {
+            font-size: 11.5px;
+          }
+        }
+      }
+    }
+    .blogs-group {
+      display: flex;
+      justify-content: space-between;
+      gap: 35px;
+      margin-top: 30px;
+      .blog-card {
+        background-color: white;
+        .blog-text {
+          padding: 30px 15px 40px 15px;
+
+          .blog-card-practises {
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 36px;
+          }
+          p {
+            font-weight: 700;
+            font-size: 29px;
+            line-height: 36px;
+          }
+        }
+        span {
+          margin-top: 40px;
+        }
+        img {
+          object-fit: cover;
+          width: 100%;
+          height: 200px;
+        }
+      }
+    }
+  }
+  .faq {
+    margin-top: 90px;
+    h2 {
+      font-weight: 800;
+      font-size: 71px;
+      line-height: 76px;
+    }
+    .question-section {
+      display: flex;
+      gap: 20px;
+      margin-top: 40px;
+      .questions {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        margin-top: 20px;
+        gap: 19px;
+        .faq-card {
+          display: flex;
+          flex-direction: column;
+          background-color: white;
+          border: 1px solid #cfcfcf;
+          border-radius: 10px;
+          .faq-title {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 15px 15px 15px 15px;
+            .title {
+              font-weight: 800;
+              font-size: 22px;
+              line-height: 22px;
+            }
+            .plus {
+              font-size: 30px;
+            }
+          }
+          p {
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 31px;
+            margin: 0px 30px 15px 15px;
+          }
+        }
+      }
+      .more-questions {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: end;
+        width: 400px;
+        height: 512px;
+        background-color: white;
+        margin-top: 20px;
+        gap: 20px;
+        padding: 20px;
+        border: 1px solid #cfcfcf;
+        border-radius: 10px;
+        i {
+          font-size: 67px;
+          margin-bottom: 20px;
+        }
+        span {
+          font-weight: 800;
+          font-size: 22px;
+          line-height: 22px;
+          text-align: center;
+          margin-bottom: 10px;
+        }
+        p {
+          font-weight: 600;
+          font-size: 16px;
+          line-height: 31px;
+          padding: 0 20px 65px 20px;
+          text-align: center;
+        }
+        button {
+          width: 100%;
+          height: 40px;
+          background-color: #ff7f5c;
+          border: none;
+          color: white;
+        }
+      }
+    }
+  }
 }
