--- a/scss/style.css
+++ b/scss/style.css
@@ -765,4 +765,66 @@ body .faq .question-section .more-questions button {
   background-color: #ff7f5c;
   border: none;
   color: white;
+}
+body .discover-section {
+  margin-top: 100px;
+}
+body .discover-section .discover-container {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+  background-color: #3734a9;
+  height: 438px;
+  align-items: center;
+  justify-content: center;
+  border-radius: 20px;
+  position: relative;
+}
+body .discover-section .discover-container span {
+  font-weight: 800;
+  font-size: 56px;
+  line-height: 61px;
+  color: white;
+  text-align: center;
+  z-index: 20;
+}
+body .discover-section .discover-container button {
+  width: 223px;
+  height: 67px;
+  background-color: #ff7f5c;
+  border-radius: 5px;
+  border: none;
+  color: white;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 30px;
+  z-index: 20;
+}
+body .discover-section .discover-container .jickjack-left {
+  position: absolute;
+  bottom: 0;
+  left: 8%;
+  bottom: 7%;
+}
+body .discover-section .discover-container .cones-left {
+  position: absolute;
+  top: 50%;
+  left: 20%;
+}
+body .discover-section .discover-container .dots {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-100%);
+  left: 14%;
+}
+body .discover-section .discover-container .jickjack-right {
+  position: absolute;
+  top: 0;
+  transform: rotate(90deg);
+  right: 15%;
+}
+body .discover-section .discover-container .cones-right {
+  position: absolute;
+  bottom: 10%;
+  right: 5%;
 }/*# sourceMappingURL=style.css.map */
